Adding logging information to diagnose circular issue